syntax = "proto3";

package ingestion_controller_operator.v1alpha;

option go_package = "github.com/romashorodok/stream-platform/gen/golang/ingestion_controller_operator/v1alpha;ingestioncontrollerpb";

service IngestControllerService {
  rpc StartServer(StartServerRequest) returns (StartServerResponse);
  rpc StopServer(StopServerRequest) returns (StopServerResponse);
}

message StartServerRequest {
  string ingest_template = 1;
  string deployment = 2;
  string namespace = 3;
}

message StartServerResponse {
  string deployment = 1;
  string namespace = 2;
}

message StopServerRequest {
  string deployment = 1;
  string namespace = 2;
}

message StopServerResponse {
  
}
